--- a/Road Networks/Road Networks.vcxproj
+++ b/Road Networks/Road Networks.vcxproj
@@ -139,7 +139,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="adj.c" />
+    <ClCompile Include="graph.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="readCSV.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="adj.h" />
+    <ClInclude Include="graph.h" />
+    <ClInclude Include="readCSV.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Beijing\Beijing_Edgelist.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
