--- a/Road Networks/Road Networks.vcxproj.filters
+++ b/Road Networks/Road Networks.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="readCSV.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dijkstra.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="adj.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="readCSV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dijkstra.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
